# TallerPro-360

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  skills-lock.json
.github/agents/: backend-api.agent.md  delivery-manager.agent.md  flutter-mobile.agent.md  product-flow.agent.md  react-mobile.md
Mobile/: app.json  metro.config.js  package-lock.json  package.json
Mobile/app/: login.tsx  (+1 more)
docs/: DESIGN_DOC.MD  PLAN.md  PRD.md  TECHSTACK.md
services/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: a9d195f06e3f_initial.py  d89380b75034_domain_models.py  f3a2b7c8d1e0_pg_notify_triggers.py
services/api/scripts/: start.sh
services/api/src/tallerpro360_api/: __init__.py  app.py  config.py  database.py  dependencies.py  observability.py  search.py  security.py  seed.py
services/api/src/tallerpro360_api/middleware/: audit.py
services/api/src/tallerpro360_api/models/: __init__.py  appointment.py  audit_log.py  customer.py  damage_record.py  diagnostic_finding.py  health_check.py  invoice.py  nps_survey.py  part.py  perimeter_photo.py  quality_check.py  quotation.py  quotation_item.py  reception_checklist.py  service_order.py  user.py  vehicle.py
services/api/src/tallerpro360_api/routers/: __init__.py  analytics.py  appointments.py  audit.py  auth.py  customers.py  findings.py  orders.py  quotations.py  uploads.py  users.py  vehicles.py
services/api/src/tallerpro360_api/schemas/: __init__.py  appointments.py  auth.py  customers.py  findings.py  orders.py  quotations.py  uploads.py  users.py  vehicles.py
services/api/src/tallerpro360_api/ws/: connection_manager.py  events.py  pg_listener.py  router.py
services/api/tests/: test_orders_qc.py  test_seed.py  test_system_endpoints.py
(+184 files in other folders)
