[project]
name = "tallerpro360-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alezzz23", email = "moisesalejandro200713@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=4.0",
    "fastapi>=0.135.3",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
]

[project.scripts]
tallerpro360-api = "tallerpro360_api:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
